Add more coverage for new code to GraphBasedUpgradeSchemaChangeVisitor, InlineTableUpgrader, OracleMetaDataProvider. #2 Refactor duplicated code.